; ModuleID = '/home/carl/AnghaBench/kphp-kdb/TL/extr_tl-parser.c_tl_token_is_type_name.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/TL/extr_tl-parser.c_tl_token_is_type_name.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tl_token = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.tl_token*)* @tl_token_is_type_name to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @tl_token_is_type_name(%struct.tl_token* %0) #0 {
  %2 = alloca %struct.tl_token*, align 8
  %3 = alloca i8*, align 8
  store %struct.tl_token* %0, %struct.tl_token** %2, align 8
  %4 = load %struct.tl_token*, %struct.tl_token** %2, align 8
  %5 = call i8* @tl_token_skip_namespace(%struct.tl_token* %4)
  store i8* %5, i8** %3, align 8
  %6 = load i8*, i8** %3, align 8
  %7 = getelementptr inbounds i8, i8* %6, i64 0
  %8 = load i8, i8* %7, align 1
  %9 = call i64 @isupper(i8 signext %8)
  %10 = icmp ne i64 %9, 0
  %11 = zext i1 %10 to i64
  %12 = select i1 %10, i32 1, i32 0
  ret i32 %12
}

declare dso_local i8* @tl_token_skip_namespace(%struct.tl_token*) #1

declare dso_local i64 @isupper(i8 signext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
